exports[`transformToWebStyle boxShadow shadow 1 1`] = `
Object {
  "boxShadow": "rgba(0,0,0,0.5) 1px 1px 15px",
}
`;

exports[`transformToWebStyle boxShadow shadow 2 1`] = `
Object {
  "boxShadow": "rgba(0,0,0,1) 1px 1px 15px",
}
`;

exports[`transformToWebStyle boxShadow shadow 3 1`] = `
Object {
  "boxShadow": "rgba(0,0,0,0.5) 0px 0px 15px",
}
`;

exports[`transformToWebStyle colors long hex 1`] = `
Object {
  "color": "fefefefe",
}
`;

exports[`transformToWebStyle colors named 1`] = `
Object {
  "color": "blue",
}
`;

exports[`transformToWebStyle colors normal hex 1`] = `
Object {
  "color": "#fefefe",
}
`;

exports[`transformToWebStyle colors rgb(...) 1`] = `
Object {
  "color": "rgb(10, 10, 10)",
}
`;

exports[`transformToWebStyle colors rgba(...) 1`] = `
Object {
  "color": "rgba(10, 10, 10, 0.5)",
}
`;

exports[`transformToWebStyle colors short hex 1`] = `
Object {
  "color": "#fff",
}
`;

exports[`transformToWebStyle expandable props borderColor 1`] = `
Object {
  "borderBottomColor": "#333",
  "borderLeftColor": "#333",
  "borderRightColor": "#333",
  "borderTopColor": "#333",
}
`;

exports[`transformToWebStyle expandable props borderRadius 1`] = `
Object {
  "borderBottomLeftRadius": "10px",
  "borderBottomRightRadius": "10px",
  "borderTopLeftRadius": "10px",
  "borderTopRightRadius": "10px",
}
`;

exports[`transformToWebStyle expandable props borderStyle 1`] = `
Object {
  "borderBottomStyle": "solid",
  "borderLeftStyle": "solid",
  "borderRightStyle": "solid",
  "borderTopStyle": "solid",
}
`;

exports[`transformToWebStyle expandable props borderWidth 1`] = `
Object {
  "borderBottomWidth": "10px",
  "borderLeftWidth": "10px",
  "borderRightWidth": "10px",
  "borderTopWidth": "10px",
}
`;

exports[`transformToWebStyle expandable props margin 1`] = `
Object {
  "marginBottom": "10px",
  "marginLeft": "10px",
  "marginRight": "10px",
  "marginTop": "10px",
}
`;

exports[`transformToWebStyle expandable props marginHorizontal 1`] = `
Object {
  "marginLeft": "10px",
  "marginRight": "10px",
}
`;

exports[`transformToWebStyle expandable props marginVertical 1`] = `
Object {
  "marginBottom": "10px",
  "marginTop": "10px",
}
`;

exports[`transformToWebStyle expandable props padding 1`] = `
Object {
  "paddingBottom": "10px",
  "paddingLeft": "10px",
  "paddingRight": "10px",
  "paddingTop": "10px",
}
`;

exports[`transformToWebStyle expandable props paddingHorizontal 1`] = `
Object {
  "paddingLeft": "10px",
  "paddingRight": "10px",
}
`;

exports[`transformToWebStyle expandable props paddingVertical 1`] = `
Object {
  "paddingBottom": "10px",
  "paddingTop": "10px",
}
`;

exports[`transformToWebStyle expanded props 1`] = `
Object {
  "marginBottom": "20px",
  "marginLeft": "20px",
  "marginRight": "20px",
  "marginTop": "20px",
  "paddingBottom": "20px",
  "paddingLeft": "20px",
  "paddingRight": "20px",
  "paddingTop": "20px",
}
`;

exports[`transformToWebStyle flex 0 1`] = `
Object {
  "WebkitFlexBasis": "auto",
  "WebkitFlexGrow": 0,
  "WebkitFlexShrink": 1,
  "flexBasis": "auto",
  "flexGrow": 0,
  "flexShrink": 1,
  "msFlexNegative": 1,
  "msFlexPositive": 0,
  "msPreferredSize": "auto",
}
`;

exports[`transformToWebStyle flex 1 1`] = `
Object {
  "WebkitFlexBasis": "auto",
  "WebkitFlexGrow": 1,
  "WebkitFlexShrink": 1,
  "flexBasis": "auto",
  "flexGrow": 1,
  "flexShrink": 1,
  "msFlexNegative": 1,
  "msFlexPositive": 1,
  "msPreferredSize": "auto",
}
`;

exports[`transformToWebStyle flexbox properties 1`] = `
Object {
  "WebkitAlignItems": "center",
  "WebkitBoxAlign": "center",
  "WebkitBoxDirection": "normal",
  "WebkitBoxOrient": "horizontal",
  "WebkitBoxPack": "center",
  "WebkitFlexDirection": "row",
  "WebkitJustifyContent": "center",
  "alignItems": "center",
  "flexDirection": "row",
  "justifyContent": "center",
  "msFlexAlign": "center",
  "msFlexDirection": "row",
  "msFlexPack": "center",
}
`;

exports[`transformToWebStyle standard props 1`] = `
Object {
  "height": "20px",
  "width": "20px",
}
`;

exports[`transformToWebStyle transform multiple 1`] = `
Object {
  "WebkitTransform": "translateX(20px) rotateX(30deg)",
  "msTransform": "translateX(20px) rotateX(30deg)",
  "transform": "translateX(20px) rotateX(30deg)",
}
`;

exports[`transformToWebStyle transform rotateX 1`] = `
Object {
  "WebkitTransform": "rotateX(30deg)",
  "msTransform": "rotateX(30deg)",
  "transform": "rotateX(30deg)",
}
`;

exports[`transformToWebStyle transform translateX 1`] = `
Object {
  "WebkitTransform": "translateX(20px)",
  "msTransform": "translateX(20px)",
  "transform": "translateX(20px)",
}
`;
